2007-07-07  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR libgfortran/32554
	* gfortran.dg/fmt_p_1.f90: New test.

2007-07-07  Mark Mitchell  <mark@codesourcery.com>

	PR c++/32232
	* g++.dg/template/overload9.C: New test.

2007-07-06  Mark Mitchell  <mark@codesourcery.com>

	PR c++/32245
	* g++.dg/init/ptrmem4.C: New test.

	PR c++/32251
	* g++.dg/init/new21.C: Likewise.

	PR c++/31992
	* g++.dg/template/static30.C: Likewise.

2007-07-06  Uros Bizjak  <ubizjak@gmail.com>

	PR rtl-optimization/32450
	* gcc.dg/pr32450.c: New runtime test.

2007-07-03  Mark Mitchell  <mark@codesourcery.com>

	PR c++/31338
	* g++.dg/ext/complex2.C: New test.

2007-07-04  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/32500
	* gcc.c-torture/execute/pr32500.c: New testcase.

2007-07-04  Uros Bizjak  <ubizjak@gmail.com>

	PR tree-optimization/31966
	PR tree-optimization/32533
	* gcc.dg/tree-ssa/pr31966.c: New runtime test.
	* gfortran.dg/pr32533.f90: Ditto.

2007-07-02  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* gcc.dg/c99-math.h: Fix typo.

2007-07-02  Jakub Jelinek  <jakub@redhat.com>

	PR libgomp/32468
	* gcc.dg/gomp/pr32468-1.c: New test.

	PR c++/31748
	* g++.dg/gomp/pr31748.C: New test.

2007-06-30  Alexandre Oliva  <aoliva@redhat.com>

	* g++.dg/ext/interface4.C, g++.dg/ext/interface4.h: New.

2007-06-28  Seongbae Park  <seongbae.park@gmail.com>

	* gcc.target/arm/stack-corruption.c: New test.

2007-06-27  Simon Martin  <simartin@users.sourceforge.net>

	PR c++/27492
	* g++.dg/inherit/covariant15.C: New test.

2007-06-21  Uros Bizjak  <ubizjak@gmail.com>

	PR target/32389
	* gcc.target/i386/pr32389.c New test.

2007-06-20  Daniel Franke  <franke.daniel@gmail.com>

	Backport from trunk:
	PR fortran/32002
	* gfortran.dg/compliant_elemental_intrinsics_2.f90: New test.

2007-06-20  Jakub Jelinek  <jakub@redhat.com>

	PR inline-asm/32109
	* g++.dg/ext/asm10.C: New test.

	PR middle-end/32285
	* gcc.c-torture/execute/20070614-1.c: New test.
