@@ -2,7 +2,7 @@
 
 extern void abort(void);
 
-#define C99_MATH_TESTS(nan, inf, huge, norm, zero)	\
+#define C99_MATH_TESTS(nan, inf, huge, norm, sub, zero)	\
 {							\
   if (fpclassify (nan) != FP_NAN)			\
     abort ();						\
@@ -14,6 +14,9 @@ extern void abort(void);
     abort ();						\
 							\
   if (fpclassify (norm) != FP_NORMAL)			\
+    abort ();						\
+							\
+  if (fpclassify (sub) != FP_SUBNORMAL)			\
     abort ();						\
 							\
   if (fpclassify (zero) != FP_ZERO)			\
@@ -32,6 +35,9 @@ extern void abort(void);
   if (isnan (norm))					\
     abort ();						\
 							\
+  if (isnan (sub))					\
+    abort ();						\
+							\
   if (isnan (zero))					\
     abort ();						\
 							\
@@ -46,6 +52,9 @@ extern void abort(void);
     abort ();						\
 							\
   if (isinf (norm))					\
+    abort ();						\
+							\
+  if (isinf (sub))					\
     abort ();						\
 							\
   if (isinf (zero))					\
@@ -64,6 +73,9 @@ extern void abort(void);
   if (!isfinite (norm))					\
     abort ();						\
 							\
+  if (!isfinite (sub))					\
+    abort ();						\
+							\
   if (!isfinite (zero))					\
     abort ();						\
 							\
@@ -78,6 +90,9 @@ extern void abort(void);
     abort ();						\
 							\
   if (!isnormal (norm))					\
+    abort ();						\
+							\
+  if (isnormal (sub))					\
     abort ();						\
 							\
   if (isnormal (zero))					\
