@@ -1,3 +1,8 @@
+2007-07-08  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* gcc.dg/c99-math-double-1.c, gcc.dg/c99-math-float-1.c,
+	c99-math-long-double-1.c, c99-math.h: Test subnormals.
+
 2007-07-07  Jerry DeLisle  <jvdelisle@gcc.gnu.org>
 
 	PR libgfortran/32554
